test/fail/int_pack_variant01.v3
//@execute 0=3
// BUG: a recursive variant gets packing width 0, because cases[0] (Nil) has no
// params, so the recursion guard in PackingUtils.packingWidth() never descends.
// This should be rejected as a recursive type, but instead type-checks and
// packs every value to 0, losing the payload entirely.
type L { case Nil; case Cons(hd: u4, tl: L); }
def main(a: int) -> int {
	def p = u32.pack<L>(L.Cons(3, L.Nil));
	def u = u32.unpack<L>(p);
	match (u) {
		Nil => return -1;
		Cons(hd, tl) => return int.view(hd);
	}
}
